--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,6 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import "./CONSTANT/RESIZE";
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+html {
+    font-size: 16px;
+    font-family: '思源黑体', 'Noto Sans CJK SC', '微软雅黑', sans-serif;
 }
