--- a/src/Pages/Index/Style.module.scss
+++ b/src/Pages/Index/Style.module.scss
@@ -33,7 +33,7 @@
         position: absolute;
         left: 0;
         right: 0;
-        top: 0;
+        top: (106rem/$RESIZE_FACTOR);
         bottom: 0;
         padding: (133rem/$RESIZE_FACTOR) (200rem/$RESIZE_FACTOR);
         display: flex;
@@ -67,6 +67,6 @@
         bottom: 0;
         background: url("../../Static/Index/background.png") no-repeat center;
         background-size: cover;
-        z-index: -1;
+        z-index: -2;
     }
 }
