拆分 SignUp 组件，完成获取验证码接口

--- a/src/Pages/SignUp/Style.module.scss
+++ b/src/Pages/SignUp/Style.module.scss
@@ -27,6 +27,7 @@
 
             .getVerificationCodeButton {
                 cursor: pointer;
+                user-select: none;
             }
         }
 
