删除所有样式的外部缩放依赖

--- a/src/Components/AccountPanel/Style.module.scss
+++ b/src/Components/AccountPanel/Style.module.scss
@@ -1,24 +1,22 @@
-@import "../../CONSTANT/RESIZE";
-
 .AccountPanel {
-    width: (1500rem/$RESIZE_FACTOR);
-    height: (800rem/$RESIZE_FACTOR);
-    border: (1rem/$RESIZE_FACTOR) solid #BBB;
+    width: (1500rem/24);
+    height: (800rem/24);
+    border: (1rem/24) solid #BBB;
     background-color: #FFF;
-    padding: (76rem/$RESIZE_FACTOR) (55rem/$RESIZE_FACTOR);
+    padding: (76rem/24) (55rem/24);
     display: flex;
     justify-content: space-between;
 
     .leftImage {
-        width: (760rem/$RESIZE_FACTOR);
-        height: (540rem/$RESIZE_FACTOR);
-        margin-top: (101rem/$RESIZE_FACTOR);
+        width: (760rem/24);
+        height: (540rem/24);
+        margin-top: (101rem/24);
         background: url("../../Static/Account/cardBackground.png") no-repeat center;
         background-size: contain;
     }
 
     .rightChildren {
-        width: (630rem/$RESIZE_FACTOR);
+        width: (630rem/24);
         height: 100%;
         display: flex;
         justify-content: center;
