--- a/src/Pages/SignUp/Style.module.scss
+++ b/src/Pages/SignUp/Style.module.scss
@@ -1,24 +1,22 @@
-@import "../../CONSTANT/RESIZE";
-
 .SignUp {
-    padding: (96rem/$RESIZE_FACTOR) (200rem/$RESIZE_FACTOR);
+    padding: (96rem/24) (200rem/24);
     display: flex;
     justify-content: center;
     align-items: center;
 
     .signUpForm {
-        width: (452rem/$RESIZE_FACTOR);
+        width: (452rem/24);
 
         .title {
             text-align: center;
-            font-size: (36rem/$RESIZE_FACTOR);
+            font-size: (36rem/24);
         }
 
         .inputWrapper {
-            margin-top: (40rem/$RESIZE_FACTOR);
+            margin-top: (40rem/24);
 
             .input {
-                margin-bottom: (35rem/$RESIZE_FACTOR);
+                margin-bottom: (35rem/24);
 
                 &:last-child {
                     margin-bottom: 0;
@@ -32,7 +30,7 @@
         }
 
         .tipWrapper {
-            margin-top: (17rem/$RESIZE_FACTOR);
+            margin-top: (17rem/24);
             display: flex;
             justify-content: flex-end;
             align-items: center;
@@ -43,15 +41,15 @@
         }
 
         .buttonWrapper {
-            margin-top: (28rem/$RESIZE_FACTOR);
+            margin-top: (28rem/24);
             display: flex;
             justify-content: center;
 
             .submitButton {
-                font-size: (28rem/$RESIZE_FACTOR);
-                width: (147rem/$RESIZE_FACTOR);
-                height: (60rem/$RESIZE_FACTOR);
-                border-radius: (20rem/$RESIZE_FACTOR);
+                font-size: (28rem/24);
+                width: (147rem/24);
+                height: (60rem/24);
+                border-radius: (20rem/24);
             }
         }
     }
