--- a/src/Components/Root/Components/Header/Style.module.scss
+++ b/src/Components/Root/Components/Header/Style.module.scss
@@ -1,25 +1,23 @@
-@import "../../../../CONSTANT/RESIZE";
-
 .Header {
     width: 100%;
-    height: (80rem/$RESIZE_FACTOR);
+    height: (80rem/24);
     background-color: #FFF;
-    border-bottom: (1rem/$RESIZE_FACTOR) solid #BBB;
+    border-bottom: (1rem/24) solid #BBB;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 (164rem/$RESIZE_FACTOR);
+    padding: 0 (164rem/24);
 
     .icon {
         background: url("../../../../Static/teamcalen.svg") no-repeat center;
-        width: (56rem/$RESIZE_FACTOR);
-        height: (69rem/$RESIZE_FACTOR);
+        width: (56rem/24);
+        height: (69rem/24);
     }
 
     .auth {
 
         .exit, .link, a {
-            font-size: (28rem/$RESIZE_FACTOR);
+            font-size: (28rem/24);
             color: #0E5DE1;
             cursor: pointer;
         }
