--- a/src/Pages/Index/Style.module.scss
+++ b/src/Pages/Index/Style.module.scss
@@ -1,23 +1,21 @@
-@import "../../CONSTANT/RESIZE";
-
 .Index {
 
     .topBar {
-        height: (106rem/$RESIZE_FACTOR);
+        height: (106rem/24);
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 (161rem/$RESIZE_FACTOR);
+        padding: 0 (161rem/24);
 
         .icon {
             background: url("../../Static/teamcalen.svg") no-repeat center;
             background-size: contain;
-            width: (161rem/$RESIZE_FACTOR);
-            height: (69rem/$RESIZE_FACTOR);
+            width: (161rem/24);
+            height: (69rem/24);
         }
 
         .linkWrapper {
-            font-size: (36rem/$RESIZE_FACTOR);
+            font-size: (36rem/24);
 
             &, & a {
                 color: #FFF;
@@ -33,28 +31,28 @@
         position: absolute;
         left: 0;
         right: 0;
-        top: (106rem/$RESIZE_FACTOR);
+        top: (106rem/24);
         bottom: 0;
-        padding: (133rem/$RESIZE_FACTOR) (200rem/$RESIZE_FACTOR);
+        padding: (133rem/24) (200rem/24);
         display: flex;
         justify-content: flex-end;
         align-items: flex-end;
 
         .text {
-            font-size: (60rem/$RESIZE_FACTOR);
+            font-size: (60rem/24);
             color: #438AFF;
             font-weight: bolder;
             text-align: center;
         }
 
         .enterButton {
-            width: (355rem/$RESIZE_FACTOR);
-            height: (90rem/$RESIZE_FACTOR);
-            font-size: (40rem/$RESIZE_FACTOR);
+            width: (355rem/24);
+            height: (90rem/24);
+            font-size: (40rem/24);
             color: #438AFF;
-            border: (1rem/$RESIZE_FACTOR) solid #BBB;
-            border-radius: (30rem/$RESIZE_FACTOR);
-            margin-top: (32rem/$RESIZE_FACTOR);
+            border: (1rem/24) solid #BBB;
+            border-radius: (30rem/24);
+            margin-top: (32rem/24);
             background-color: #FFF;
         }
     }
