--- a/src/Components/Root/Style.module.scss
+++ b/src/Components/Root/Style.module.scss
@@ -1,7 +1,7 @@
 .Root {
 
     .backgroundLeft {
-        position: absolute;
+        position: fixed;
         left: 0;
         right: 50%;
         top: 0;
@@ -11,7 +11,7 @@
     }
 
     .backgroundRight {
-        position: absolute;
+        position: fixed;
         left: 50%;
         right: 0;
         top: 0;
