--- a/src/Pages/Index/Style.module.scss
+++ b/src/Pages/Index/Style.module.scss
@@ -58,7 +58,7 @@
     }
 
     .background {
-        position: absolute;
+        position: fixed;
         left: 0;
         right: 0;
         top: 0;
