完成添加日程逻辑

--- a/src/Pages/ControlPanel/NewSchedule/Components/NewSchedulePanel/Style.module.scss
+++ b/src/Pages/ControlPanel/NewSchedule/Components/NewSchedulePanel/Style.module.scss
@@ -38,6 +38,14 @@
                     width: 100%;
                 }
             }
+
+            .endTimeWrapper {
+                width: 100%;
+
+                .endTime {
+                    width: 100%;
+                }
+            }
         }
 
 
