--- a/src/Pages/ControlPanel/AccountManagement/Style.module.scss
+++ b/src/Pages/ControlPanel/AccountManagement/Style.module.scss
@@ -1,3 +1,10 @@
 .AccountManagement {
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    height: 100%;
 
+    .leftPart, .rightPart {
+        width: 50%;
+    }
 }
