修正部分样式

--- a/src/Components/ControlPanel/Style.module.scss
+++ b/src/Components/ControlPanel/Style.module.scss
@@ -48,9 +48,12 @@
                 }
 
                 &.active, &:hover {
-                    font-weight: bold;
                     color: #005BE7;
                     border-left: (4rem/24) solid #005BE7;
+                }
+
+                &.active {
+                    font-weight: bold;
                 }
             }
         }
