--- a/src/Pages/ControlPanel/NewSchedule/Components/ScheduleOverview/Style.module.scss
+++ b/src/Pages/ControlPanel/NewSchedule/Components/ScheduleOverview/Style.module.scss
@@ -19,6 +19,7 @@
         .timelineTitle {
             font-size: (36rem/24);
             text-align: center;
+            font-weight: bold;
         }
 
         .timeline {
