--- a/src/Pages/ControlPanel/NewSchedule/Components/NewSchedulePanel/Style.module.scss
+++ b/src/Pages/ControlPanel/NewSchedule/Components/NewSchedulePanel/Style.module.scss
@@ -55,7 +55,7 @@
         width: 100%;
         margin-top: (57rem/24);
 
-        .title {
+        .label {
             font-size: (28rem/24);
             text-align: center;
         }
